--- a/src/app/books/book/book.component.html
+++ b/src/app/books/book/book.component.html
@@ -1,27 +1,33 @@
-<table class="table table-striped">
+<table class="table table-responsive table-sm table-striped">
     <thead>
         <tr>
             <th>Book Title</th>
             <th>Book Author</th>
-            <th>Book Number of Pages</th>
-            <th>Book Publisher</th>
-            <th>Update Book</th>
-            <th>Delete Book</th>
+            <th >Book Number of Pages</th>
+            <th >Book Publisher</th>
+            <th >Update Book</th>
+            <th >Delete Book</th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let book of books; let id=index">
             <td>{{book.title}}</td>
             <td>{{book.author}}</td>
-            <td>{{book.numberOfPages}}</td>
-            <td>{{book.publisher}}</td>
-            <td>
-                <button class="btn shadow-none">
+            <td >{{book.numberOfPages}}</td>
+            <td >{{book.publisher}}</td>
+            <td >
+                <button 
+                    class="btn shadow-none" 
+                    (click)="updateBook(book.id)"
+                    [disabled]="areDeleteAndUpdateIconsDisabled">
                     <i-bs name="pen"></i-bs>
                 </button>
             </td>
-            <td>
-                <button class="btn shadow-none" (click)="deleteBook(id)">
+            <td >
+                <button 
+                        class="btn shadow-none" 
+                        (click)="deleteBook(book.id)"
+                        [disabled]="areDeleteAndUpdateIconsDisabled">
                     <i-bs name="trash"></i-bs>
                 </button>
             </td>
