Updated a danger message when all books in library are deleted.

--- a/src/app/books/book/book.component.html
+++ b/src/app/books/book/book.component.html
@@ -34,5 +34,6 @@
         </tr>
     </tbody>
 </table>
+<p class="text-danger" style="text-align:center" [hidden]="!isLibraryEmpty"><b>The Library is empty. Please add books using the Add Book button.</b></p>
 
 
