--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container"
+      *ngIf="isHeaderVisible">
     <nav class="navbar navbar-expand-md navbar-light bg-light ">
         <div class="navbar-header"><a class="navbar-brand" routerLink="/">Library Management App</a></div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,5 +16,8 @@
             </li>
           </ul>
         </div>
+        <button 
+          class="btn float-right"
+          (click)="onLogOut()">Logout</button>
       </nav>
 </div>
